JBoss EAP単体版を作成